# coherent-swarm-uav

./: CMakeLists.txt  README.md  package.xml  plugins.xml  sketch.txt
custom_configs/: Coherent.yaml  goal_default.yaml
custom_configs_example/: Coherent.yaml
include/: Coherent.h  CoherentD.h
launch/: Coherent_swarm.launch
src/: Coherent.cpp  CoherentD.cpp
tmux_scripts/: coherent-swarm-uvdar.sh  coherent-swarm-uvdar.yml  sensor_type.yaml  uav3_pos.yaml  uvdar_test.sh  uvdar_test.yml
tmux_scripts/custom_configs/: mpc_tracker.yaml
tmux_scripts/five_drones/: coherent-swarm-uvdar.yml  world.yaml
tmux_scripts/five_drones/custom_configs/: Coherent.yaml  uav2_pos.yaml  uav5_pos.yaml
tmux_scripts/four_drones/: .tmuxinator.yml  coherent-swarm-uvdar.yml  uav1_pos.yaml  uav2_pos.yaml  uav3_pos.yaml  uav4_pos.yaml
tmux_scripts/four_drones/custom_configs/: Coherent.yaml  goal.yaml  uav1_pos.yaml  uav4_pos.yaml
tmux_scripts/four_drones/worlds/: grass_plane_lab_test.world
tmux_scripts/six_dronesBROKEN/: .tmuxinator.yml
tmux_scripts/six_dronesBROKEN/custom_configs/: Coherent.yaml  uav3_pos.yaml  uav4_pos.yaml  uav5_pos.yaml  uav6_pos.yaml
tmux_scripts/three_drones/: .tmuxinator.yml  coherent-swarm-uvdar.yml  session.yml  uav1_pos copy.yaml  uav1_pos.yaml  uav2_pos.yaml  uav3_pos.yaml
tmux_scripts/three_drones/custom_configs/: Coherent.yaml  goal.yaml  uav1_pos.yaml  uav2_pos.yaml  uav3_pos.yaml
tmux_scripts/two_drones/: coherent-swarm-uvdar.yml  session.yml
tmux_scripts/two_drones/custom_configs/: Coherent.yaml  goal.yaml  uav1_pos.yaml  uav2_pos.yaml
world/: lab_test.world
