<?xml version="1.0"?>
<package format="2">
  <name>coherent-swarm-uav-default</name>
  <version>0.0.0</version>
  <description>The coherent-swarm-uav package</description>
  <maintainer email="jorge.luiz.henri@hotmail.com">Jorge Henriques</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml" />
  </export>
</package>
